tests/standalone-tests/failing/dont-touch-fornum-var.lua
local count = 0

for a = 1, 2 do
  a = 1
end

